# mpfw_code_libs_sdk_mac_ext

./: .gitignore
src/mcu/mcuPort/v_00/: mcuPort.cpp  mcuPort.h
src/mcu/mcuSPI/v_00/: mcuPort.cpp  mcuPort.h
src/mcu/mcuUART/v_00/: mcuUART.cpp  mcuUART.h
src/pph/pphButton/v_00/: pphButton.cpp  pphButton.h
src/pph/pphLed/v_00/: pphLed.cpp  pphLed.h
src/shm/shmChCom/v_00/: shmChCom.cpp  shmChCom.h
src/shm/shmWired/v_00/: shmWired.cpp  shmWired.h
src/vhw/vhwManager/v_00/: vhwManager.cpp  vhwManager.h  vhwTbl.h  vhwUnit.cpp  vhwUnit.h
src/vhw/vhwTest/v_00/: vhwTest.cpp  vhwTest.h  vhwTest2.cpp  vhwTest2.h  vhwTestMain.cpp
src/vhw/vhwTest/v_01_ptr/: vhwMain.cpp  vhwUnit.cpp  vhwUnit.h  vhwUnitManager.cpp  vhwUnitManager.h  vhwUnitManagerTbl.cpp  vhwUnitManagerTbl.h  vhwUnitTest1.h
src/vhw/vhwTest/v_01_ref/: CMakeLists.txt  dtyArray.cpp  dtyArray.h  dtyBaseArray.cpp  dtyBaseArray.h  dtyBaseCntnrUnit.cpp  dtyBaseCntnrUnit.h  dtyBaseCntnrUnitX.cpp  dtyBaseCntnrUnitX.h  dtyBaseUnit.cpp  dtyBaseUnit.h  dtyStuf.cpp  dtyStuf.h  dtyStufX.cpp  dtyStufX.h  dtyStufXTypesDefs.h  dtyTuiBase.cpp  dtyTuiBase.h  dtyUint8.h  mcuManager.cpp  mcuManager.h  mcuPinPort.cpp  mcuPinPort.h  mcuPinPort2.cpp  mcuPinPort2.h  mcuPinPortDefineConfig.h  mcuPortDef.h  mcuUSART.cpp  mcuUSARTConfig.h  mcuUSARTTbl.h  pphButton.cpp  pphButton.h  pphLed.cpp  pphLed.h  pphMacroDefine.h  pphManager.cpp  pphRely.cpp  pphRely.h  pphSwitch.cpp  pphSwitch.h  (+126 more)
src/vhw/vhwTest/v_01_ref/wsp/: toolchain_compile_option.cmake
src/vhw/vhwTest/v_02_ref/: CMakeLists.txt  dtyBaseArray.cpp  dtyBaseArray.h  dtyBaseCntnrUnit.h  dtyBaseCntnrUnitX.cpp  dtyBaseCntnrUnitX.h  dtyBuffer.h  dtyCntnrArrayList.cpp  dtyCntnrArrayList.h  dtyCntnrArraySet.cpp  dtyCntnrArraySet.h  dtyCntnrStreamList.cpp  dtyCntnrStreamList.h  dtyCntnrStreamOfFormattedString.cpp  dtyCntnrStreamOfFormattedString.h  dtyProtocolData.cpp  dtyProtocolData.h  dtyProtocolDataTypesDefs.h  dtyString.cpp  dtyString.h  dtyStringInfo.h  dtyStuf.cpp  dtyStuf.h  dtyStufX.cpp  dtyStufX.h  dtyTuiBase.cpp  dtyTuiBase.h  dtyTuiBaseUnit.cpp  dtyTuiBaseUnit.h  dtyTuiGraphic.cpp  dtyTuiGraphic.h  dtyTypesDefs.h  dtyUint8.cpp  dtyUint8.h  mcuDeviceConfig.h  mcuPinPort.cpp  mcuPinPort2.cpp  mcuPortDef.cpp  mcuUSART.h  mcuUSARTManager.cpp  (+121 more)
src/vhw/vhwTest/v_02_ref/wsp/: toolchain_compile_option.cmake  toolchain_link_option.cmake
wsp/cmake/project/v_00/: CMakeLists.txt  set_cpp_files.cmake
wsp/cmake/project/v_00/public/: 02_set_prj_dir.cmake  03_set_inc_dirs.cmake  05_set_obj_lib_build_dirs.cmake  toolchain_compile_option.cmake  toolchain_link_option.cmake
